tdf#88351: Revert "coverity#704341 Logically dead code"

This reverts commit 7b1f5cc16fdbc0c53d0b7f9e3f45decd1136f4fa.

Change-Id: I85d4c45025817914d6b78458f24a343f3b05879c
Reviewed-on: https://gerrit.libreoffice.org/31017
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 5507b741ccf018c06fb29694d13837abcac4486a)
Reviewed-on: https://gerrit.libreoffice.org/31023
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>